tests/error_corpus/validation_errors/not_implemented/E214_empty_scoped_annotation.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Comment:	ERROR: Scoped annotation cannot be empty
@Comment:	Invalid: 'hello [*]' - Empty error annotation
*CHI:	hello [*] .
@End
