tests/error_corpus/parse_errors/E312_unknown_scoped_marker.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
@Comment:	ERROR: Unknown scoped annotation marker "&"
@Comment:	Invalid: "[& text]" - & is not a valid scoped annotation marker
@Comment:	Valid markers: [!], [?], [= text], [% text], [* text], etc.
*CHI:	hello [& text] world .
@End
